@@ -345,7 +345,14 @@ modifier will allow this to be disabled (will implement only if easy to do
 with OpenC++).</blockquote>
 <p>Implementation:</p>
 <blockquote>
-Straightforward use of OpenC++'s example &quot;WrapperClass&quot;.</blockquote>
+<p>Straightforward use of OpenC++'s example &quot;WrapperClass&quot;.</p>
+<p>Variadic function support is not perfect but can be made to work.  You can't
+write a true variadic function, e.g. <tt class="literal"><span class="pre">foo(const</span> <span class="pre">char</span> <span class="pre">*fmt,..)</span></tt>, because
+you can't pass the variable argument list.  Instead, you must write a
+va_list function directly, e.g. <tt class="literal"><span class="pre">foo(const</span> <span class="pre">char</span> <span class="pre">*fmt,va_list</span> <span class="pre">ap)</span></tt>.  Plasma
+will then create a variadic version and a v_list version for you that are
+wrapped with locking code.</p>
+</blockquote>
 <p>Regressions:</p>
 <blockquote>
 <ol class="arabic simple">
@@ -489,7 +496,7 @@ TBD</blockquote>
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="schedule.rst">View document source</a>.
-Generated on: 2004/05/24 09:41:48 CDT.
+Generated on: 2004/05/25 15:04:58 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
