@@ -272,7 +272,8 @@ syntax is:</p>
 <pre class="literal-block">
 alt {
   port (&lt;value decl&gt; ; &lt;channel expr&gt; ;) { &lt;body&gt; }
-  ...
+  [ alt { ... } ]
+  [ afor { ... } ]
   [ { &lt;default block&gt; } ]
 }
 </pre>
@@ -289,6 +290,9 @@ channel has data.</p>
 <p>If a default block is specified, the <strong>alt</strong> block will never cause the thread
 to sleep.  Instead, if no channels have data, the default block will be
 executed.</p>
+<p><strong>alt</strong> and <strong>afor</strong> (explained below) blocks may be nested within <strong>alt</strong>
+blocks.  This allows the user to block on multiple collections of channels, or a
+collection of channels plus one or more single channels, etc.</p>
 </div>
 <div class="section" id="afor-blocks">
 <h3><a class="toc-backref" href="#id10" name="afor-blocks">Afor Blocks</a></h3>
@@ -333,10 +337,30 @@ an iterator rather than an integer as an index.</p>
 <li><dl class="first">
 <dt>You only have access, within the <strong>port</strong> body, to the first loop iterator</dt>
 <dd>variable.  Therefore, avoid fancy <strong>afor</strong> loops which declare multiple
-variables in the first statement or update multiple variables in the third statement.</dd>
+variables in the first statement or update multiple variables in the third
+statement.</dd>
 </dl>
 </li>
 </ol>
+<p>As noted above, an <strong>afor</strong> block may be nested within an <strong>alt</strong> block.  This
+allows you to block on one or more collections and/or to block on a collection
+plus one or more single channels.  For example, thhe following code will block
+on a collection and an override channel::</p>
+<pre class="literal-block">
+alt {
+  afor (int i = 0; i != (int)channels.size(); ++i) {
+    port (int v; channels[i];) {
+      printf (&quot;Got a value from port %d:  %d\n&quot;,i,v);
+      if (v &lt; 0) ++donecount;
+    }
+  }
+  port (bool b; stopchan;) {
+    if (b) {
+      printf (&quot;Got a stop command!\n&quot;);
+    }
+  }
+}
+</pre>
 </div>
 <div class="section" id="shared-data-structures">
 <h3><a class="toc-backref" href="#id11" name="shared-data-structures">Shared Data Structures</a></h3>
@@ -411,7 +435,7 @@ void msg(const char *fmt, ...) {
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="user-guide.rst">View document source</a>.
-Generated on: 2004/05/20 14:30:40 CDT.
+Generated on: 2004/05/25 15:04:58 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
