@@ -79,6 +79,11 @@ my @Tests = (
 	      cmd     => "./chan10",
 	      checker => \&check_chan10,
 	     },
+	     # Channel test w/multiple afor and alts in an alt and a default block
+	     {
+	      cmd     => "./chan11",
+	      checker => \&check_chan11,
+	     },
 	     # Spawn test- C++ only.
 	     {
 	      cmd     => "./spawn1",
@@ -377,6 +382,22 @@ sub check_chan10 {
 	      [7.7625, 8.7625, 9.7625, 10.7625, 11.7625, 12.7625, 13.7625, 14.7625, 15.7625, 16.7625]
 	      );
   check_channel (@_[0],"Got a value from port (\\d+):\\s+(\\d+\.?\\d*)",\@data,12);
+}
+
+sub check_chan11 {
+  my @data = ([60..69],
+	      [20..29],
+	      [200..209],
+	      [2000..2009],
+	      [20000..20009],
+	      [200000..200009],
+	      [2000000..2000009],
+	      [2.3, 3.3, 4.3, 5.3, 6.3, 7.3, 8.3, 9.3, 10.3, 11.3 ],
+	      [3.45, 4.45, 5.45, 6.45, 7.45, 8.45, 9.45, 10.45, 11.45, 12.45],
+	      [5.175, 6.175, 7.175, 8.175, 9.175, 10.175, 11.175, 12.175, 13.175, 14.175],
+	      [7.7625, 8.7625, 9.7625, 10.7625, 11.7625, 12.7625, 13.7625, 14.7625, 15.7625, 16.7625]
+	      );
+  check_channel (@_[0],"Got a value from port (\\d+):\\s+(\\d+\.?\\d*)",\@data,12,["No value present."]);
 }
 
 # Makes sure expected results are found.
